fixing a typo in a markdown cell

--- a/pokemon.ipynb
+++ b/pokemon.ipynb
@@ -2561,7 +2561,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Top 5 pokemons according to some numerical stat"
+    "## Top 5 pokemons according to some numerical stats"
    ]
   },
   {
